--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">@color/white</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="transparent00">@android:color/transparent</color>
+    <color name="transparent05">#0D000000</color>
+    <color name="transparent10">#18000000</color>
+    <color name="transparent15">#26000000</color>
+    <color name="transparent20">#33000000</color>
+    <color name="transparent25">#40000000</color>
+    <color name="transparent30">#4D000000</color>
+    <color name="transparent35">#59000000</color>
+    <color name="transparent40">#66000000</color>
+    <color name="transparent45">#73000000</color>
+    <color name="transparent50">#88000000</color>
+    <color name="transparent55">#8C000000</color>
+    <color name="transparent60">#99000000</color>
+    <color name="transparent65">#A6000000</color>
+    <color name="transparent70">#B3000000</color>
+    <color name="transparent75">#BF000000</color>
+    <color name="transparent80">#CC000000</color>
+    <color name="transparent85">#D9000000</color>
+    <color name="transparent90">#E6000000</color>
+    <color name="transparent95">#F2000000</color>
+
+    <color name="status_bar_color">@color/transparent20</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="white_t20">#33ffffff</color>
+    <color name="white_t30">#3dFFFFFF</color>
+    <color name="white_t50">#88FFFFFF</color>
+    <color name="white_t90">#E6FFFFFF</color>
+    <color name="black">#000000</color>
+
 </resources>
