--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,5 +14,12 @@
             android:layout_height="wrap_content"
             android:padding="8dp" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvToViewBinding"
+            android:text="to view bind frg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp" />
+
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
