--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -18,12 +18,28 @@
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
+        <action
+            android:id="@+id/action_forward_vb"
+            app:destination="@id/viewBindFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
     </fragment>
 
     <fragment
         android:id="@+id/listFragment"
         android:name="com.acdprd.modulex.fragment.ListFragment"
         tools:layout="@layout/fragment_list">
+
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/viewBindFragment"
+        android:name="com.acdprd.modulex.fragment.ViewBindingFragment"
+        tools:layout="@layout/fragment_vb">
 
 
     </fragment>
