--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,6 +28,13 @@
             android:layout_height="wrap_content"
             android:padding="8dp" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvToUseCase"
+            android:text="to use case"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp" />
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
